Make use of badass-jlink-plugin