@@ -6,6 +6,7 @@ import java.util.stream.Stream
 plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.7'
+    id 'org.beryx.jlink' version '2.5.1'
 }
 
 group 'xyz.ronella.template'
@@ -39,25 +40,14 @@ javafx {
 
 mainClassName = "$moduleName/xyz.ronella.template.javafx.desktop.Main"
 
-def java_home = hasProperty('org.gradle.java.home') ? getProperty('org.gradle.java.home') : System.getenv('JAVA_HOME')
-def fx_jmods = hasProperty('path.to.fx.mods') ? getProperty('path.to.fx.mods') : System.getenv('PATH_TO_FX_MODS')
-
-task jlink(type: Exec) {
-    dependsOn 'clean'
-    dependsOn 'jar'
-
-    workingDir 'build'
-
-    if (java_home == null) {
-        throw new RuntimeException("java_home is not defined.")
+jlink {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher{
+        moduleName = 'template.javafx.desktop'
+        mainClassName = 'template.javafx.desktop/xyz.ronella.template.javafx.desktop.Main'
     }
-    if (fx_jmods == null) {
-        throw new RuntimeException("fx_jmods is not defined.")
-    }
-    commandLine "${java_home}/bin/jlink", '--module-path', "libs${File.pathSeparatorChar}${fx_jmods};${sourceSets.main.compileClasspath.asPath}",
-            '--add-modules', "${moduleName},org.apache.logging.log4j,org.apache.logging.log4j.core", '--output', "${moduleName}", '--strip-debug',
-            '--compress', '2', '--no-header-files', '--no-man-pages',
-            '--launcher', 'javafx-desktop=template.javafx.desktop/xyz.ronella.template.javafx.desktop.Main'
+    forceMerge('log4j-api')
+    imageName = "${project.name}-${version}"
 }
 
 processResources {
